<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F4C3"
    tools:context="com.example.prasoon.justjava.MainActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="560dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textName"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/name_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/textEditViewHint"
                    android:inputType="textAutoComplete"
                    android:textColorHint="#9E9D24" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/textTextViewQuantity"
                style="@style/CustomStyles"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp">

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:onClick="incrementNumberOfCoffees"
                    android:text="@string/textButtonPlus"
                    android:textColor="#FFFFFF"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/quantity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/textTextViewQuantityDisplay"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:onClick="decrementNumberOfCoffees"
                    android:text="@string/textButtonMinus"
                    android:textColor="#FFFFFF"
                    android:textSize="23sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/textViewToppings"
                android:textAllCaps="false"
                android:textSize="28sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp" />

            <CheckBox
                android:id="@+id/whippedCream_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginStart="80dp"
                android:text="@string/textCheckBoxWhippedCream"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <CheckBox
                android:id="@+id/Chocolate_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginStart="90dp"
                android:text="@string/textCheckBoxChocolate"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:text="@string/OrderSummary"
                android:textAllCaps="false"
                android:textSize="28sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/orderSummary_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/Rs.0"
                android:textColor="#000000"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:onClick="submitOrder"
                android:text="@string/ORDER"
                android:textColor="#FFFFFF" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:onClick="sendBillEmail"
                android:text="@string/SendBill"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>